# JumpMaestro

./: .gitignore  .gitmodules  CMakeLists.txt
assets/: SansSerif.fnt  constants.json  map.json  notes.txt
include/: App.h  Collider.h  Constants.h  Elements.h  GameObject.h  GameState.h  Map.h  Player.h  Quad.h  StartState.h  State.h  Target.h  Text.h  Texture.h
src/: App.cpp  Collider.cpp  Constants.cpp  Elements.cpp  GameState.cpp  Main.cpp  Map.cpp  Player.cpp  Quad.cpp  StartState.cpp  State.cpp  Target.cpp  Text.cpp  Texture.cpp
